ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ingress.demo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: product-app-service
            port:
              number: 8081
